samples/_failures_safe/1761263537_14d41b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee7e7d6f.c: In function ‘main’:
./samples/SAFE/__tmp_ee7e7d6f.c:126:5: error: expected identifier or ‘(’ at end of input
  126 |     char
      |     ^~~~
./samples/SAFE/__tmp_ee7e7d6f.c:126:5: error: expected declaration or statement at end of input
